--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,50 +1,89 @@
-<div class="jumbotron" style="background-image: url(https://images.unsplash.com/photo-1547104984-924116a9c464?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1217&q=80); background-size: 100%;">
-  <div class="container">
-    <h1 class="display-4 text-white"><b>Faites porter votre voix et agissez ensemble dans votre ville</b></h1>
-    <p  class="text-white">Agora est une plate-forme citoyenne vous permettant de proposer et de partager des initiatives locales  </p>
-    <% if user_signed_in? %>
-    <p><%= link_to 'Je veux créer ma proposition', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
+<br>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6"> 
+      <h1> La plateforme collaborative en ligne</h1>
+      <h4 class="text-white">Agora est une plateforme citoyenne vous permettant de proposer et de partager des initiatives locales  </h4>
+       <% if user_signed_in? %>
+    <p><%= link_to 'Proposer mon idée', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
     <%else%>
     <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Je veux créer ma proposition</a></p>
     <%end%>
+    </div>
+
+     <div class="col-md-6">
+         <%= image_tag("share.svg", style: "width:110%") %>
+      </div>
   </div>
+
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card card-testimonial">
+                <div class="icon">
+                  <i class="material-icons">format_quote</i>
+                </div>
+                <div class="card-content">
+                  <h5 class="card-description">
+                    Your products, all the kits that I have downloaded from your site and worked with are sooo cool! I love the color mixtures, cards... everything. Keep up the great work!
+                  </h5>
+                </div>
+
+                <div class="footer">
+                  <h4 class="card-title">Alec Thompson</h4>
+                  <h6 class="category">@alecthompson</h6>
+                  <div class="card-avatar">
+                    <a href="#pablo">
+                      <img src="https://images.unsplash.com/photo-1586297098710-0382a496c814?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80">
+                    </a>
+                  </div>
+                </div>
+              </div>
+      </div>
+    </div>  
+  </div>  
 </div>
 
 <div class="container">
   <h2 class="text-center"><b>Comment ça marche ?</b></h2>
   <br>
   <br>
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading">Consultez et votez pour les propositions de votre ville <i class="material-icons" style="font-size: 35px">how_to_vote</i>
-        <p class="lead">Chaque jour des citoyens des votre ville postent des propositions pour améliorer le quotidien de la ville. Consultez et débattez des propositions ensemble!</p>
-      </div>
-      <div class="col-md-5">
-        <img src = "https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
-      </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="row featurette">
+
+   <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Proposez des idées sur des thèmes qui vous inspirent <i class="material-icons" style="font-size: 35px">wb_incandescent</i></h2>
+        <h2 class="featurette-heading">Proposez vos idées <i class="material-icons" style="font-size: 35px">wb_incandescent</i></h2>
         <p class="lead">Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de proposer vos idées pour la ville. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src = "https://images.unsplash.com/photo-1550418290-a8d86ad674a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
+         <%= image_tag("idea.svg", style: "width:80%") %>
       </div>
+      
     </div>
+  <div class="row featurette">
+   <div class="col-md-5">
+       <%= image_tag("voting.svg", style: "width:80%") %>
+      </div>
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Votez pour les propositions de votre ville <i class="material-icons" style="font-size: 35px">how_to_vote</i>
+        <p class="lead">Chaque jour des citoyens des votre ville postent des propositions pour améliorer le quotidien de la ville. Consultez et débattez des propositions ensemble!</p>
+      </div>
+     
+    </div>
+  
+   
     <br>
     <br>
     <br>
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Sélectionnez les meilleures idées ensemble et agissez !<i class="material-icons" style="font-size: 35px">people</i></h2>
+        <h2 class="featurette-heading">Rendez ces idées possibles<i class="material-icons" style="font-size: 35px">people</i></h2>
         <p class="lead">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Ensemble, unissez-vous pour faire avancer les choses!</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src = "https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="577,5" height="375" >
+        <%= image_tag("group.svg", style: "width:80%") %>
       </div>
     </div>
   </div>
