--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,7 +36,7 @@
                   <%= f.label :city, "Ville * (Les prochaines villes arrivent bientôt ;)" %>                                                                   
                 </label>
                 <br>
-                <%= f.collection_select :city_id, City.all, :id, :name, prompt: true %>
+                <%= f.collection_select :city_id, City.all, :id, :name, {prompt: true}, {class: "btn btn-sm btn-primary btn-round"} %>
               </div>
               <div class="form-group label-floating">
                 <label class="control-label">
