--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -18,7 +18,7 @@
             <div class="col-xs col-sm-6">
               <select id="category" class="selectpicker" data-style="select-with-transition" multiple title="Choisissez une catégorie" data-size="7">
                 <% @categories.each do |category| %>
-                  <option value="<%= category.id %>"><%= category.name %></option>
+                <option value="<%= category.id %>"><%= category.name %></option>
                 <% end %>
               </select>
             </div>
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="text-center">
-          <button id="validate_btn" class="btn btn-primary btn-round btn-sm" type="button">Valider</button>
+          <button id="validate_btn" class="btn btn-primary btn-round btn-sm" type="button"><i class="material-icons">check</i> Valider</button>
         </div>
       </div>
     </div>
@@ -93,11 +93,26 @@
     </div>
     <%end%>
   </div>
-
+  
   <script>
     $(document).ready(() => {
       $('#validate_btn').click(() => {
         console.log('click')
+        let url = "/items";
+        $.ajax({
+          url: url,
+          type: 'GET',
+          dataType: 'html',
+          data: { category_id: category_id },
+          success: (result) => {
+            $('#items_container').remove(); 
+            let items_container = $(result).filter('#items_container')[0];
+            $('#category_selector').after(items_container);
+          },
+          error: (error) => {
+            console.log(error);
+          }
+        });
       })
     })
   </script>
