changing title section

--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -21,7 +21,7 @@
               <a href="#pill1" data-toggle="tab">Problème adressé</a>
             </li>
             <li>
-              <a href="#pill2" data-toggle="tab">Solution</a>
+              <a href="#pill2" data-toggle="tab">Solution proposée</a>
             </li>
           </ul>
           <div class="tab-content">
