improved 'choose file'

--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -49,7 +49,7 @@
               <div class="label-floating">
                 <%= f.label :picture, "Associez une belle image à ta proposition. *" %>  
               </div>
-              <%= f.file_field :picture, class: "btn btn-sm btn-info" %>
+              <%= f.file_field :picture, class: "btn btn-sm btn-primary btn-round"%>
             </div>
             <div class='col-sm-6'>
               <img id = 'picture' class="my-img" src="" alt="">
