--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -10,3 +10,56 @@ background-color: #FFFFFF !important;
 .text-wrap {
   word-wrap: break-word;
 }
+
+.idea-icon {
+  position: relative;
+  top: 6px;
+  left: 1px;
+}
+
+.vote-icon {
+  position: relative;
+  top: 3px;
+  left: 1px;
+}
+
+.group-icon {
+  position: relative;
+  top: 7px;
+  left: 1px;
+}
+
+.text-home {
+  position: relative;
+  top: 25px;
+}
+
+.img-top {
+  position: relative;
+  top: 35px;
+}
+
+.img-center {
+  position: relative;
+  bottom: 30px;
+}
+
+.img-group {
+  position: relative;
+  bottom: 20px;
+}
+
+.img-bottom {
+  position: relative;
+  bottom: 35px;
+}
+
+.city {
+  position: relative;
+  top: 25px;
+}
+
+.box:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2); 
+}
+
