--- a/app/views/users/contact.html.erb
+++ b/app/views/users/contact.html.erb
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div class="col-md-3">
-             <img src = "https://images.unsplash.com/photo-1568992687947-868a62a9f521?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1778&q=80" width="462" height="300" >
+              <%= image_tag("team.svg", style: "width:100%") %>
         </div>
     <div class="col-md-2"></div>
 </div>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <p class="category"><i class="material-icons">place</i>Ibiza</p>
+                        <p class="category"><i class="material-icons">place</i>Clermont-Ferrand</p>
                     </div>
                 </div>
             </div>
