--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,9 +26,10 @@
 </div>
 <br>
   <br>
-  <div class="container" style="width: 70em;">
+  <div class="container">
     <div class="row justify-content-center">
       <%if @proposals.count != 0 %>
+      <div class="col">
         <div class="card">
           <div class="card-header card-header-text" data-background-color="blue">
             <h4 class="card-title">Mes propositions</h4>
@@ -56,6 +57,7 @@
                 <p class="text-center text-muted">Vous n'avez pas encore créé de propositions.</p>
               <% end %>
             </table>
+          </div>
         </div>
       </div>
     </div>
