adding cancellation to comments

--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -104,6 +104,7 @@
     <%= submit_tag "Envoyer", {class: 'btn btn-primary text-right'} %>
   <% end %>
 <br>
+<h4><b>Espace débat</b></h4><br>
 <table class="table">
     <tbody>
       <%@comments.each do |x|%>
@@ -121,7 +122,12 @@
               <%end%>
               </b><br>
               <p><%=x.content%></p>
-              <p class = primary> Message posté le <%=x.created_at.to_formatted_s(:short)%></p>
+              <p class = primary> 
+              Message posté le <%=x.created_at.to_formatted_s(:short)%>
+              <%if current_user.id == x.user.id%>
+                <%= link_to 'effacer',proposal_comment_path(@proposal.id, x.id), class: 'btn btn-danger btn-xs',method: :delete %>
+              <%end%>
+              </p>
             </td>
         </tr>
       <%end%>
