--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,17 +1,9 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-7 city">
-      <h1 class="display-4">Les propositions citoyennes à <%=@city.name%></h1>
-      <p class="lead">Retrouvez les meilleures propositions du moment ci-dessous</p>
-    </div>
-    <div class="col-md-5 city">
-     <%= image_tag("city.svg", style: "width:100%") %>
-    </div>
+<div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); background-size: 100%;">
+  <div class="container">
+    <h1 class="display-4">Les propositions citoyennes à <%= @city.name %></h1>
+    <p class="lead">Retrouvez les meilleurs propositions du moment ci-dessous</p>
   </div>
 </div>
-
-<br>
-<br>
 
 <div class="container">
   <div class="form-row">
@@ -72,12 +64,12 @@
                     </td>
                     <%if x.vote_of(current_user)%>
                       <td>
-                        <%= link_to "#{x.votes_count}", proposal_vote_path(x.id, x.vote_of(current_user).id), :class => "btn btn-primary btn-lg", method: :delete%>
+                        <%= link_to "#{x.votes_count}", proposal_vote_path(x.id, x.vote_of(current_user).id), :class => "btn btn-success btn-lg", method: :delete%>
                         <h5> A voté ! <i class="material-icons" style="font-size: 20px" >done</i></h5>
                       </td>
                     <%else%>
                       <td> 
-                        <%= link_to "#{x.votes_count}", proposal_votes_path(x.id), :class => "btn btn-secondary btn-lg", method: :post%>
+                        <%= link_to "#{x.votes_count}", proposal_votes_path(x.id), :class => "btn btn-primary btn-lg", method: :post%>
                         <h5> Voter   <i class="material-icons"style="font-size: 20px" >arrow_drop_up</i></h5>
                       </td>
                     <%end%>
