--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -61,12 +61,16 @@
         <div class="card">
           <div class="card-content text-center">
             <% unless is_current_user_owner_of?(@proposal) %>
-              <h5 class="text-muted">Votez pour cette proposition</h5>
-              <%if @proposal.vote_of(current_user)%>
-                <%= link_to 'A voté', proposal_vote_path(@proposal.id, @proposal.vote_of(current_user).id), :class => "btn btn-primary", method: :delete %>
+              <%if (@proposal.differencebetween == false)%>
+                <h5 class="text-muted">Votez pour cette proposition</h5>
+                <%if @proposal.vote_of(current_user)%>
+                  <%= link_to 'A voté', proposal_vote_path(@proposal.id, @proposal.vote_of(current_user).id), :class => "btn btn-primary", method: :delete %>
+                <%else%>
+                  <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(@proposal.id), :class => "btn btn-success", method: :post %>
+                <% end %>
               <%else%>
-                <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(@proposal.id), :class => "btn btn-success", method: :post %>
-              <% end %>
+                <h5> Vote terminé</h5>
+              <%end%>
             <% end %>
             <h5><%= @proposal.votes_count %> Votes</h5>
           </div>
