--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -64,7 +64,7 @@
                     </td>
                     <%if x.vote_of(current_user)%>
                       <td>
-                        <%= link_to "#{x.votes_count}", proposal_vote_path(x.id, x.vote_of(current_user).id), :class => "btn btn-success btn-lg", method: :delete%>
+                        <%= link_to "#{x.votes_count} <i class='material-icons' style='font-size: 19px'>how_to_vote</i>".html_safe, proposal_vote_path(x.id, x.vote_of(current_user).id), :class => "btn btn-success btn-lg", method: :delete%>
                         <h5> A voté ! <i class="material-icons" style="font-size: 20px" >done</i></h5>
                       </td>
                     <%else%>
