configure send mailer after vote

--- a/app/views/proposal_mailer/send_email_after_votes.html.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.html.erb
@@ -5,6 +5,12 @@
   </head>
   <body>
     <h1>Salut <%= @user.first_name %> !</h1>
+
+    <% @vote_user.each do |votes|%>
+<p> Voici les votants : <%= votes.email%> <p>
+<%end %>
+
+
    
 <p>Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
  </p>
