--- a/app/views/proposal_mailer/send_email_after_votes.text.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.text.erb
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <h1>Salut <%= @user.first_name %> !</h1>
-   
-<p>Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
- </p>
- <p>
-     Encore bravo pour ta super idée et à très vite sur Agora !
-    </p>
+testetstets
 
-
-   <p> L'équipe Agora <p> 
-
-  </body>
-</html>
+<% @vote.each do |votes|%>
+<p> Voici les votants : <%= votes.email%> <p>
+<%end %>
