--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="container">
+<div id="filter" class="container">
   <div class="row">
     <div class="col-xs col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
       <div class="card">
@@ -14,11 +14,11 @@
         </div>
         <div class="card-content">
           <div class="row">
-            <br><br>
+            <h6 class='text-muted'>Filtre de propositions</h6>
             <div class="col-xs col-sm-6">
               <select id="categories" class="selectpicker" data-style="select-with-transition" multiple title="Choisissez une catégorie" data-size="7">
                 <% @categories.each do |category| %>
-                <option value="<%= category.id %>"><%= category.name %></option>
+                  <option value="<%= category.id %>"><%= category.name %></option>
                 <% end %>
               </select>
             </div>
@@ -41,8 +41,10 @@
 
 <div id=<%= @city.id %> class="my-city container">
   <% if @proposals.count == 0 %>
-    <h3> Personne n'a posté de proposition à <%= @city.name %> pour le moment. Si tu veux le faire, clique sur le bouton : </h3>
-    <p><%= link_to 'Je veux créer ma proposition', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
+    <div id="no-proposal">
+      <h5> Personne n'a posté de proposition à <%= @city.name %> pour le moment. Si tu veux le faire, clique sur le bouton : </h5>
+      <%= link_to 'Je veux créer ma proposition', new_proposal_path, class: 'btn btn-primary btn-md' %>
+    </div>
   <%else%>
     <h3>Les propositions en cours : votez pour vos propositions préférées !</h3>
     <div class="row">
