add mailer after votes

--- a/app/views/proposal_mailer/send_email_after_votes.text.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.text.erb
@@ -1,5 +1,8 @@
-testetstets
+Mise en relation avec les utilisateur ayant votés pour votre proposition
 
-<% @vote.each do |votes|%>
-<p> Voici les votants : <%= votes.email%> <p>
+========================================================
+
+Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+ <% @votes.each do |vote|%>
+Voici les votants : <%= vote.user.email%> 
 <%end %>
