--- a/app/views/proposal_mailer/send_email_after_votes.html.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.html.erb
@@ -6,8 +6,11 @@
   <body>
     <h1>Salut <%= @user.first_name %> !</h1>
 
-    <% @vote_user.each do |votes|%>
-<p> Voici les votants : <%= votes.email%> <p>
+    
+
+<p> Voici les votants : </p>
+    <% @votes.each do |vote|%>
+<p> <%= vote.user.email%> <p>
 <%end %>
 
 
