numbring proposals + center vote button in city show + ponctuation ---

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -42,7 +42,6 @@ background-color: #FFFFFF !important;
 .img-center {
   position: relative;
   bottom: 30px;
- 
 }
 
 .img-group {
@@ -83,6 +82,14 @@ background-color: #FFFFFF !important;
   display: flex;
   flex-direction: row;
   justify-content: start;
+  align-items: center;
+}
+
+.flex-row-center
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
 }
 
