--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -91,16 +91,22 @@
                         </a>
                         <span class="badge badge-primary"><%= x.category.name %></span>
                       </td>
-                      <%if x.vote_of(current_user)%>
-                        <td>
-                          <%= link_to "#{x.votes_count} <i class='material-icons' style='font-size: 19px'>how_to_vote</i>".html_safe, proposal_vote_path(x.id, x.vote_of(current_user).id), :class => "btn btn-success btn-lg", method: :delete%>
-                          <h5> A voté ! <i class="material-icons" style="font-size: 20px" >done</i></h5>
-                        </td>
-                      <%else%>
+                      <%if x.votes_count <= 100 %>
+                         <%if x.vote_of(current_user)%>
+                           <td>
+                               <%= link_to "#{x.votes_count} <i class='material-icons' style='font-size: 19px'>how_to_vote</i>".html_safe, proposal_vote_path(x.id, x.vote_of(current_user).id), :class => "btn btn-success btn-lg", method: :delete%>
+                               <h5> A voté ! <i class="material-icons" style="font-size: 20px" >done</i></h5>
+                           </td>
+                         <%else%>
+                           <td> 
+                               <%= link_to "#{x.votes_count}", proposal_votes_path(x.id), :class => "btn btn-primary btn-lg", method: :post%>
+                               <h5> Voter   <i class="material-icons"style="font-size: 20px" >arrow_drop_up</i></h5>
+                           </td>       
+                          <%end%>
+                      <%else%> 
                         <td> 
-                          <%= link_to "#{x.votes_count}", proposal_votes_path(x.id), :class => "btn btn-primary btn-lg", method: :post%>
-                          <h5> Voter   <i class="material-icons"style="font-size: 20px" >arrow_drop_up</i></h5>
-                        </td>
+                           <button class="btn btn-warning">VOTES CLOS</button>
+                        </td>   
                       <%end%>
                       <td><td>
                     </tr>
