footer color changed

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -105,3 +105,13 @@ background-color: #FFFFFF !important;
 {
   background-color: #5bc0de;
 }
+
+.footer-down
+{
+  background-color: #1D6DB8;
+}
+
+.text-white
+{
+  color: #FFFFFF;
+}
