--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,35 +2,35 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h2 class="text-white">Agora</h2>
-        <p class="pr-5 text-white">Vous aussi, concrétisez votre projet !</p>
+        <h2 class="text-white-footer">Agora</h2>
+        <p class="pr-5 text-white-footer">Vous aussi, concrétisez votre projet !</p>
         <br>
         <div class="text-left center-block">
-          <a href="https://www.facebook.com" class="text-white"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
-          <a href="https://twitter.com" class="text-white"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
-          <a href="https://plus.google.com" class="text-white"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
-          <a href="https://mail.google.com" class="text-white"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+          <a href="https://www.facebook.com" class="text-primary"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+          <a href="https://twitter.com" class="text-primary"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+          <a href="https://plus.google.com" class="text-primary"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+          <a href="https://mail.google.com" class="text-primary"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
         </div>
       </div>
       <div class="col-md-4">
-        <h4 class=" mt-sm-3 text-white">Nous connaître</h4>
-        <p><a href="/contact" class="text-white">À propos</a></p>
-        <p><a href="#" class="text-white">Mentions légales </a></p>
-        <p><a href="#" class="text-white">Notre charte</a></p>
-        <p><a href="#" class="text-white">Politique de confidentialité</a></p>
-        <p><a href="#" class="text-white">FAQ</a></p>
+        <h4 class=" mt-sm-3 text-white-footer">Nous connaître</h4>
+        <p><a href="/contact" class="text-white-footer">À propos</a></p>
+        <p><a href="#" class="text-white-footer">Mentions légales </a></p>
+        <p><a href="#" class="text-white-footer">Notre charte</a></p>
+        <p><a href="#" class="text-white-footer">Politique de confidentialité</a></p>
+        <p><a href="#" class="text-white-footer">FAQ</a></p>
       </div>
       <div class="col-md-4">
-        <h4 class="mt-lg-0 mt-sm-4 text-white">Contact</h4>
+        <h4 class="mt-lg-0 mt-sm-4 text-white-footer">Contact</h4>
         <br>
-        <p class="text-white">22 rue des lauriers, 33000 Bordeaux</p>
-        <p class="mb-0 text-white"><i class="fa fa-phone mr-3 text-white"></i> 05 62 23 55 89</p>
-        <p class="text-white"><i class="fa fa-envelope-o mr-3 text-white"></i> zeagoraproject@gmail.com</p>
+        <p class="text-white-footer">22 rue des lauriers, 33000 Bordeaux</p>
+        <p class="mb-0 text-white-footer"><i class="fa fa-phone mr-3 text-white-footer"></i> 05 62 23 55 89</p>
+        <p class="text-white-footer"><i class="fa fa-envelope-o mr-3 text-white-footer"></i> zeagoraproject@gmail.com</p>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-md-12 text-center">
-        <p class=""><small class="text-white">© 2020. All Rights Reserved.</small></p>
+        <p class=""><small class="text-white-footer">© 2020. All Rights Reserved.</small></p>
       </div>
     </div>
   </div>
